[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"
spl-token-2022 = { version="=3.0.4", features = [ "no-entrypoint" ] }
